[metadata]
name=wp-site-extractor
version=0.0.1

[options]
package_dir=
    =src
packages=find:
install_requires=
    pandas
    beautifulsoup4
    tqdm
    langcodes
    numpy
    lxml; python_version>"3.8"

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    wpextract = extractor.cli:main
